--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,33 +1,51 @@
 * {
-	box-sizing: border-box;
-	&:before, &:after {
-		box-sizing: border-box;
-	}
-  }
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
+  box-sizing: border-box;
 
-html, body {
-	height: 100%
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+}
+
+* {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
+}
+
+html,
+body {
+  height: 100%
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 body {
-	font-size: 16px;
-	min-width: 320px;
-	position: relative;
-	line-height: 1.3;
-	font-family: Arial, sans-serif;
-	overflow-x: hidden;
-	opacity: 1;
-	color: #333;
+  font-size: 16px;
+  min-width: 280px;
+  position: relative;
+  line-height: 1.2;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  opacity: 1;
+  color: #333;
 }
+
 .img-responsive {
-	display: block;
-	max-width: 100%;
-	height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
+
 .text-center {
-	text-align: center;
+  text-align: center;
 }
