--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -3,33 +3,29 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width: 1200px){
-	/**/
-}
+
+@media only screen and (max-width : 1680px) {}
+
+@media only screen and (max-width : 1366px) {}
+
+@media only screen and (max-width : 1280px) {}
+
+@media only screen and (max-width : 1024px) {}
+
+@media only screen and (max-width : 800px) {}
+
+@media only screen and (max-width : 768px) {}
+
+@media only screen and (max-width : 600px) {}
+
+@media only screen and (max-width : 533px) {}
+
+@media only screen and (max-width : 360px) {}
+
+@media only screen and (max-width : 320px) {}
 
 
-/* Medium Devices, Desktops */
-@media only screen and (max-width: 992px){
-  /**/
-}
 
-
-/* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
-	/**/
-}
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
-	/**/
-}
-
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width : 320px){
-	/**/
-}
 
 
 
