--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,101 @@
 @import "vars";
 
 //Основной код
+body {
+  width: 100%;
+  min-height: 100vh;
+  background: #17122A;
+  color: #ffffff;
+}
+
+.menu {
+
+  &__inner {
+    
+  }
+
+  &__message {}
+
+  &__message-title {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  &__message-icons {
+    display: inline-flex;
+  }
+
+  &__message-icon {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+  }
+
+  &__project {}
+
+  &__project-title {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  &__project-subtitle {
+    font-size: 16px;
+  }
+
+  &__project-btn {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #36CC8F;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  &__person {}
+
+  &__person-logo-wrap {
+    display: inline-block;
+  }
+
+  &__person-logo {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 50%;
+  }
+
+  &__person-content {}
+
+  &__person-content-name {}
+
+  &__person-content-icons {
+    display: flex;
+  }
+
+  &__person-content-icon {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+  }
+}
+
+
 
 
 @import "media"; // Всегда в конце
